--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ header {
     background-image: url("images/backsplash.jpg");
     background-color: black;
     background-size: 100%;
-    height: 50vh;
+    height: 425px;
     width: 100%;
     margin-top: 0;
     background-repeat: no-repeat;
