--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ header {
   color: white;
   background: rgba(0, 0, 0, 0.75);
   text-align: center;
-  font-family: 'Permanent Marker', cursive;
+  font-family: 'Baloo Bhai', cursive;
   font-size: 30px;
 }
 
