--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ nav a {
 
 header {
   margin-top: 100px;
-  color: white;
+  color: #66fcf1;
   background: rgba(0, 0, 0, 0.75);
   text-align: center;
   font-family: 'Baloo Bhai', sans-serif;
