--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ header {
 
 header img {
   width: 150px;
-  border: black 5px solid;
+  border: black 3px solid;
   border-radius: 50%;
 }
 
@@ -71,7 +71,7 @@ main {
 .about {
   color: white;
 
-  border-radius: 20px;
+  /* border-radius: 20px; */
   padding: 20px;
   background: rgba(0, 0, 0, 0.75);
   width: 50%;
