--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ header {
   margin-top: 100px;
   color: white;
   text-align: center;
-  font-family: 'Baloo Bhai', sans-serif;
+  font-family: 'Fjalla One', sans-serif;
   font-size: 30px;
 }
 
