--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,13 @@
 }
 
 html {
-  background-color: #77e0fe;
+  background-color: white;
 }
 
 nav {
   position: fixed;
   top: 0;
-  background: #35b3fd;
+  background: #060d3b;
   width: 100%;
   display: flex;
   align-items: center;
@@ -26,7 +26,7 @@ nav a {
 }
 
 nav a:hover {
-  color: black;
+  color: #3b5180;
 }
 
 header {
@@ -35,6 +35,7 @@ header {
   text-align: center;
   font-family: 'Lalezar', sans-serif;
   font-size: 30px;
+  background: url(images/backsplash.jpg);
 }
 
 header img {
@@ -52,8 +53,8 @@ main {
 }
 
 .project {
-  color: black;
-  background: rgba(53, 179, 253, 0.25);
+  color: white;
+  background: rgba(6, 13, 59);
   margin: 20px;
   padding: 30px;
   border-radius: 10px;
@@ -65,11 +66,11 @@ main {
 }
 
 .project h2 {
-  color: black;
+  color: white;
 }
 
 .project a {
-  color: black;
+  color: white;
   font-size: 14px;
 }
 
@@ -78,22 +79,26 @@ main {
 }
 
 .about {
-  color: black;
+  color: white;
   border-radius: 10px;
   padding: 20px;
-  background: rgba(53, 179, 253, 0.25);
+  background: rgba(6, 13, 59);
   width: 50%;
   margin: 20px;
   justify-self: right;
 }
 
 .about h2 {
-  color: black;
+  color: white;
   margin-bottom: 20px;
 }
 
 .about-picture img {
   border-radius: 10px;
+}
+
+.about-main {
+  padding: 20px;
 }
 
 @media (max-width: 600px) {
