--- a/styles.css
+++ b/styles.css
@@ -30,12 +30,15 @@ nav a:hover {
 }
 
 header {
-  margin-top: 100px;
   color: white;
   text-align: center;
   font-family: 'Lalezar', sans-serif;
   font-size: 30px;
   background: url(images/backsplash.jpg);
+  width: 760px;
+  margin: 0 auto;
+  margin-top: 100px;
+  border-radius: 10px;
 }
 
 header img {
@@ -110,6 +113,10 @@ main {
 @media (max-width: 800px) {
   main {
     display: block;
+  }
+
+  header {
+    width: 75vw;
   }
 
   .project {
