--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,9 @@ nav {
   top: 0;
   background: #060d3b;
   width: 100%;
-  display: flex;
-  align-items: center;
   margin-bottom: 0;
+  text-align: center;
+  padding: 15px;
 }
 
 nav a {
@@ -26,7 +26,7 @@ nav a {
 }
 
 nav a:hover {
-  color: #3b5180;
+  color: #80a7bf;
 }
 
 header {
