--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,14 @@ nav {
   background: #030c40;
   width: 100%;
   padding: 10px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  display: grid;
+  justify-content: right;
+  height: 50px;
+}
+
+.navLink {
+  display: grid;
+  visibility: hidden;
 }
 
 nav a {
@@ -25,6 +30,10 @@ nav a {
   text-decoration: none;
   font-size: 18px;
   margin-right: 10px;
+}
+
+.menu {
+  margin-left: 50px;
 }
 
 nav a:hover {
@@ -67,7 +76,8 @@ header img {
 
 #about,
 #projects,
-#skills {
+#skills,
+#contact {
   font-family: 'Lato', sans-serif;
   color: black;
   background: #fff;
@@ -120,10 +130,6 @@ header img {
   font-size: 28px;
 }
 
-#skills p {
-  padding-bottom: 50px;
-}
-
 .employment {
   color: #0dd9d9;
 }
@@ -138,6 +144,23 @@ header img {
   transition: all ease 500ms;
 }
 
+#contact a {
+  font-family: 'Lato', sans-serif;
+  color: black;
+  text-decoration: none;
+  font-size: 30px;
+  margin-right: 59px;
+}
+
+#contact a:hover {
+  color: #0dd9d9;
+  transition: all ease 500ms;
+}
+
+.contact {
+  padding-bottom: 50px;
+}
+
 footer {
   background: #030c40;
   width: 100%;
@@ -150,10 +173,6 @@ footer p {
 }
 
 @media (max-width: 750px) {
-  nav {
-    display: inline-block;
-  }
-
   header {
     text-align: center;
   }
